--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    
+    <div class="bg-image"></div>
     <div class="main-canvas">
         
             <header class="home">
