--- a/library.html
+++ b/library.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 </head>
 <body>
+    <div class="bg-image"></div>
     <div class="main-canvas">
         <header class="home">
             <div class="container">
@@ -28,8 +30,9 @@
         </header>  
 
         <div class="overlay-container">
-            <section id="font" class="materials">
+            <section class="materials">
                 <h1>Library of Formulas</h1>
+                <p id="itemCount" class="item-count"></p>
                 <input type="text" id="searchBox" class="myinput" placeholder="Search formulas..." onkeyup="filterMaterials()">
                 
                 <ul id="materialsList">
@@ -38,6 +41,9 @@
             </section>
         </div>
     </div>
+    <section>
+        <a class="gotop" href="#"><i class="fas fa-arrow-up"></i></a>
+    </section>
     <script src="libraryScript.js"></script>
     <script>
         loadMaterials('library.json');
