--- a/naturals.html
+++ b/naturals.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 </head>
 <body>
+    <div class="bg-image"></div>
     <div class="main-canvas">
         <header class="home">
             <div class="container">
@@ -35,17 +37,21 @@
             
             <section class="materials">
                 <h1>Natural Materials</h1>
+                <p id="itemCount" class="item-count"></p>
                 <input type="text" id="searchBox" class="myinput" placeholder="Search materials..." onkeyup="filterMaterials()">
                 <input type="text" id="blendSearchBox" class="myinput" placeholder="Blends well with..." onkeyup="filterBlendMaterials()">
                 
             </section>
-            <section class="materials">
+            <section  class="materials">
                 <ul id="materialsList">
                     <!-- JavaScript will populate this list -->
                 </ul>
             </section>
         </div>
     </div>
+    <section>
+        <a class="gotop" href="#"><i class="fas fa-arrow-up"></i></a>
+    </section>
     <script src="script.js"></script>
     <script>
         loadMaterials('naturals.json');
