--- a/form.html
+++ b/form.html
@@ -13,11 +13,12 @@
         <header class="home">
             <div class="container">
                 <div id="mate-brand">
-                    <!-- Logo placeholder -->
+                    <a href="index.html">
+                        <img src="logo2.png" alt="logo" class="logo">
+                    </a>
                 </div>
                 <nav id="main-navigation">
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/naturals.html">Naturals</a></li>
                         <li><a href="/synthetics.html">Synthetics</a></li>
                         <li><a href="/formulator.html">Formulator</a></li>
