--- a/synthetics.html
+++ b/synthetics.html
@@ -15,11 +15,12 @@
         <header class="home">
             <div class="container">
                 <div id="mate-brand">
-                    <!--logo-->
+                    <a href="index.html">
+                        <img src="logo2.png" alt="logo" class="logo">
+                    </a>
                 </div>
                 <nav id="main-navigation">
-                    <ul>
-                        <li><a href="/index.html">Home</a></li>
+                    <ul>                       
                         <li><a href="/naturals.html">Naturals</a></li>
                         <li><a href="/synthetics.html">Synthetics</a></li>
                         <li><a href="/formulator.html">Formulator</a></li>
