--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="text-container">
                     <img src="perfumewebbg2.jpg" alt="perfume image" class="background-image">
-                    <h1>The Becoming of a Perfumer</h1>
+                    <h1>Le parfum d'un rêve</h1>
                 </div>    
 
             </header>  
