--- a/formulator.html
+++ b/formulator.html
@@ -35,7 +35,7 @@
                 
                 <!-- Input for formula name -->
                 <div>
-                    <label for="formulaName">Formula Name:</label>
+                    <label class="formulaName" for="formulaName">Formula Name:</label>
                     <input type="text" id="formulaName" placeholder="Enter formula name...">
                 </div>
 
