--- a/form.html
+++ b/form.html
@@ -23,6 +23,7 @@
                         <li><a href="/synthetics.html">Synthetics</a></li>
                         <li><a href="/formulator.html">Formulator</a></li>
                         <li><a href="/library.html">Library</a></li>
+                        <li><a href="/collections.html">Collections</a></li>
                     </ul>
                 </nav>                    
             </div>
