--- a/form2.html
+++ b/form2.html
@@ -81,6 +81,7 @@
 
             // Gather form data
             const formData = {
+                type: "collection",
                 name: document.getElementById('name').value,
                 date_added: document.getElementById('dateAdded').value,
                 link: document.getElementById('link').value,
