--- a/library.html
+++ b/library.html
@@ -45,7 +45,8 @@
                 <h1>Library of Formulas</h1>
                 <p id="itemCount" class="item-count"></p>
                 <input type="text" id="searchBox" class="myinput" placeholder="Search formulas..." onkeyup="filterMaterials()">
-                
+            </section>
+            <section class="materials">
                 <ul id="materialsList">
                     <!-- JavaScript will populate this list with formulas -->
                 </ul>
